<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:gravity="center"
        android:id="@+id/addfoodheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editDiaryEntry_toptitle"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
        android:id="@+id/date_textfield"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:text=""
        android:hint="@string/dateHint"
        android:layout_margin="20dp"
        android:clickable="true"
        />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/name_content_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:layout_margin="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/kcal_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kcal"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/kcal_content_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:layout_margin="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/quantity_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_name"
                android:layout_margin="20dp"/>

            <TextView
                android:id="@+id/quantity_content_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:layout_margin="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/unit_content_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:layout_margin="20dp"/>

        </LinearLayout>
    </LinearLayout>


    <EditText
        android:id="@+id/portion_textfield"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/portion"
        android:layout_margin="20dp"/>



    <Button
        android:id="@+id/submitfoodbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addtodiary_buttontext"
        android:layout_margin="20dp"/>


</LinearLayout>
